[gd_scene load_steps=9 format=3 uid="uid://drjv6mqrkwq3n"]

[ext_resource type="Script" path="res://Scripts/Menus/InventoryPanel/InventoryMenu.gd" id="1_jk776"]
[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://Themes/rootTheme.tres" id="2_88mhw"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://Themes/titleTextTheme.tres" id="3_826lm"]
[ext_resource type="Texture2D" uid="uid://p871kcr0eyx6" path="res://Graphics/SOUVUTU0.png" id="4_obp0q"]
[ext_resource type="Theme" uid="uid://cr8ed0igvvahw" path="res://Themes/ButtonRowTheme.tres" id="4_onx6o"]
[ext_resource type="PackedScene" uid="uid://bw758t8yxr7j1" path="res://Prefabs/UI/Inventory/ItemDetailsPanel.tscn" id="5_u77dw"]
[ext_resource type="PackedScene" uid="uid://ie2m5n6k0qjg" path="res://Prefabs/UI/Inventory/ItemUsePanel.tscn" id="7_lpeho"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gb27x"]
atlas = ExtResource("4_obp0q")
region = Rect2(96, 32, 8, 8)

[node name="InventoryPanelNode" type="Node2D"]
script = ExtResource("1_jk776")

[node name="InventoryPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 960.0
theme = ExtResource("2_88mhw")

[node name="Panel" type="Panel" parent="InventoryPanel"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 960.0

[node name="InventoryTitle" type="RichTextLabel" parent="InventoryPanel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 12.0
offset_right = 150.0
offset_bottom = 62.0
grow_horizontal = 2
theme = ExtResource("3_826lm")
bbcode_enabled = true
text = "[center]Your Inventory[/center]"
fit_content = true

[node name="GoldCountGroup" type="Control" parent="InventoryPanel/Panel"]
layout_mode = 1
anchors_preset = 0
offset_left = 28.0
offset_top = 28.0
offset_right = 132.0
offset_bottom = 108.0

[node name="GoldLabel" type="RichTextLabel" parent="InventoryPanel/Panel/GoldCountGroup"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]Your Gold:[/center]"
fit_content = true

[node name="GoldSprControl" type="Control" parent="InventoryPanel/Panel/GoldCountGroup"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 32.0
offset_bottom = 16.0
grow_vertical = 2
size_flags_horizontal = 0

[node name="GoldSprite" type="Sprite2D" parent="InventoryPanel/Panel/GoldCountGroup/GoldSprControl"]
position = Vector2(16, 16)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_gb27x")

[node name="GoldCount" type="RichTextLabel" parent="InventoryPanel/Panel/GoldCountGroup"]
clip_contents = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -13.0
offset_right = 102.0
offset_bottom = 13.0
grow_vertical = 2
text = "456,789"
fit_content = true

[node name="ToggleShopInventoryButton" type="Button" parent="InventoryPanel/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -232.0
offset_top = 28.0
offset_right = -29.0
offset_bottom = 68.0
grow_horizontal = 0
text = "Show Your Inventory"

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryPanel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 80.0
offset_right = 300.0
offset_bottom = 120.0
grow_horizontal = 2
theme = ExtResource("4_onx6o")
alignment = 1

[node name="HealingButton" type="Button" parent="InventoryPanel/Panel/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Healing"

[node name="ShardsButton" type="Button" parent="InventoryPanel/Panel/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Shards"

[node name="WeaponsButton" type="Button" parent="InventoryPanel/Panel/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Weapons"

[node name="ArmorButton" type="Button" parent="InventoryPanel/Panel/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Armor"

[node name="KeyItemsButton" type="Button" parent="InventoryPanel/Panel/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Key Items"

[node name="ScrollContainer" type="ScrollContainer" parent="InventoryPanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 128.0
offset_right = -80.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryPanel/Panel/ScrollContainer"]
custom_minimum_size = Vector2(1120, 76)
layout_mode = 2

[node name="BackButton" type="Button" parent="InventoryPanel/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -56.0
offset_right = 25.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="ItemDetailsPanel" parent="." instance=ExtResource("5_u77dw")]
visible = false

[node name="ItemUsePanel" parent="." instance=ExtResource("7_lpeho")]
visible = false

[connection signal="item_used" from="." to="." method="_on_item_used"]
[connection signal="pressed" from="InventoryPanel/Panel/ToggleShopInventoryButton" to="." method="_on_toggle_shop_inventory_button_pressed"]
[connection signal="toggled" from="InventoryPanel/Panel/HBoxContainer/HealingButton" to="." method="_on_healing_button_toggled"]
[connection signal="toggled" from="InventoryPanel/Panel/HBoxContainer/ShardsButton" to="." method="_on_shards_button_toggled"]
[connection signal="toggled" from="InventoryPanel/Panel/HBoxContainer/WeaponsButton" to="." method="_on_weapons_button_toggled"]
[connection signal="toggled" from="InventoryPanel/Panel/HBoxContainer/ArmorButton" to="." method="_on_armor_button_toggled"]
[connection signal="toggled" from="InventoryPanel/Panel/HBoxContainer/KeyItemsButton" to="." method="_on_key_items_button_toggled"]
[connection signal="pressed" from="InventoryPanel/Panel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ItemDetailsPanel/Panel/BackButton" to="." method="_on_details_back_button_pressed"]

[editable path="ItemDetailsPanel"]
